# dataproduct_builder

./: .pre-commit-config.yaml  README.md  cookiecutter.json
.github/workflows/: python-package.yml
dataproduct_builder/: .bumpversion.toml  CONFIG_USAGE.md  COPYRIGHT  Dockerfile  INSTALLATION.md  PACKAGE_SCHEMA.md  SCHEMA_DIAGRAM.txt  example_aggregation_config.json  example_aggregation_with_count.json  example_flexible_aggregation.json  example_peptide_aggregation.json  example_peptide_config.json  example_simple_aggregation.json  example_simple_config.json  example_with_quality_checks.json  fixed_config.json  pip.conf  pyproject.toml  requirements.txt
dataproduct_builder/src/dataproduct_builder/: __init__.py  cli.py  column_ops.py  config_executor.py  frame_ops.py  quality_checks.py  row_ops.py
{{ cookiecutter.repo_name }}/: README.md  environment.yml
